--- a/my-react-router-app/package.json
+++ b/my-react-router-app/package.json
@@ -9,6 +9,11 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@amsterdam/design-system-assets": "../../design-system/proprietary/assets",
+    "@amsterdam/design-system-react-icons": "../../design-system/proprietary/react-icons",
+    "@amsterdam/design-system-tokens": "../../design-system/proprietary/tokens",
+    "@amsterdam/design-system-css": "../../design-system/packages/css",
+    "@amsterdam/design-system-react": "../../design-system/packages/react",
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
     "isbot": "^5.1.17",
