--- a/my-nextjs-app/package.json
+++ b/my-nextjs-app/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "my-nextjs-app",
   "version": "0.1.0",
+  "name": "my-nextjs-app",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev --turbopack",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
+    "@amsterdam/design-system-assets": "^0.3.0",
+    "@amsterdam/design-system-css": "^0.14.0",
+    "@amsterdam/design-system-react": "^0.14.0",
+    "@amsterdam/design-system-react-icons": "^0.1.13",
+    "@amsterdam/design-system-tokens": "^0.14.0",
+    "clsx": "^2.1.1",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
