--- a/my-react-router-app/package.json
+++ b/my-react-router-app/package.json
@@ -9,16 +9,18 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@amsterdam/design-system-assets": "../../design-system/proprietary/assets",
-    "@amsterdam/design-system-react-icons": "../../design-system/proprietary/react-icons",
-    "@amsterdam/design-system-tokens": "../../design-system/proprietary/tokens",
-    "@amsterdam/design-system-css": "../../design-system/packages/css",
-    "@amsterdam/design-system-react": "../../design-system/packages/react",
+    "@amsterdam/design-system-assets": "^0.3.0",
+    "@amsterdam/design-system-css": "^0.14.0",
+    "@amsterdam/design-system-react": "^0.14.0",
+    "@amsterdam/design-system-react-icons": "^0.1.13",
+    "@amsterdam/design-system-tokens": "^0.14.0",
     "@react-router/node": "^7.1.3",
     "@react-router/serve": "^7.1.3",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.1.3"
   },
   "devDependencies": {
@@ -28,7 +30,6 @@
     "@types/react-dom": "^19.0.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
