--- a/my-remix-app/package.json
+++ b/my-remix-app/package.json
@@ -11,12 +11,19 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@amsterdam/design-system-assets": "^0.3.0",
+    "@amsterdam/design-system-css": "^0.14.0",
+    "@amsterdam/design-system-react": "^0.14.0",
+    "@amsterdam/design-system-react-icons": "^0.1.13",
+    "@amsterdam/design-system-tokens": "^0.14.0",
     "@remix-run/node": "^2.15.2",
     "@remix-run/react": "^2.15.2",
     "@remix-run/serve": "^2.15.2",
+    "clsx": "^2.1.1",
     "isbot": "^4.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.2",
