--- a/my-nextjs-app/package.json
+++ b/my-nextjs-app/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@amsterdam/design-system-assets": "^0.3.0",
-    "@amsterdam/design-system-css": "^0.14.0",
-    "@amsterdam/design-system-react": "^0.14.0",
+    "@amsterdam/design-system-css": "^0.14.1",
+    "@amsterdam/design-system-react": "^0.14.1",
     "@amsterdam/design-system-react-icons": "^0.1.13",
     "@amsterdam/design-system-tokens": "^0.14.0",
     "clsx": "^2.1.1",
@@ -21,12 +21,13 @@
     "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.3.0",
+    "@types/node": "^20.17.24",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.1.6",
-    "typescript": "^5"
-  }
+    "typescript": "^5.8.2"
+  },
+  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
 }
