--- a/my-react-router-app/package.json
+++ b/my-react-router-app/package.json
@@ -9,29 +9,30 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@amsterdam/design-system-assets": "^0.3.0",
-    "@amsterdam/design-system-css": "^0.14.0",
-    "@amsterdam/design-system-react": "^0.14.0",
-    "@amsterdam/design-system-react-icons": "^0.1.13",
-    "@amsterdam/design-system-tokens": "^0.14.0",
-    "@react-router/node": "^7.1.3",
-    "@react-router/serve": "^7.1.3",
+    "@amsterdam/design-system-assets": "^1.0.0",
+    "@amsterdam/design-system-css": "^1.0.1",
+    "@amsterdam/design-system-react": "^1.1.0",
+    "@amsterdam/design-system-react-icons": "^1.0.0",
+    "@amsterdam/design-system-tokens": "^1.0.1",
+    "@react-router/node": "^7.7.0",
+    "@react-router/serve": "^7.7.0",
     "clsx": "^2.1.1",
-    "isbot": "^5.1.17",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-router": "^7.1.3"
+    "isbot": "^5.1.28",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
+    "react-router": "^7.7.0"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.1.3",
-    "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "typescript": "^5.7.2",
-    "vite": "^5.4.11",
+    "@react-router/dev": "^7.7.0",
+    "@types/node": "^20.19.9",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "typescript": "^5.8.3",
+    "vite": "^5.4.19",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
