--- a/my-nextjs-app/package.json
+++ b/my-nextjs-app/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "0.1.0",
   "name": "my-nextjs-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
@@ -9,25 +9,25 @@
     "start": "next start"
   },
   "dependencies": {
-    "@amsterdam/design-system-assets": "^0.3.0",
-    "@amsterdam/design-system-css": "^0.14.1",
-    "@amsterdam/design-system-react": "^0.14.1",
-    "@amsterdam/design-system-react-icons": "^0.1.13",
-    "@amsterdam/design-system-tokens": "^0.14.0",
+    "@amsterdam/design-system-assets": "^1.0.0",
+    "@amsterdam/design-system-css": "^1.0.1",
+    "@amsterdam/design-system-react": "^1.1.0",
+    "@amsterdam/design-system-react-icons": "^1.0.0",
+    "@amsterdam/design-system-tokens": "^1.0.1",
     "clsx": "^2.1.1",
     "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@types/node": "^20.17.24",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "eslint": "^9.22.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "^20.19.9",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.1.6",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
-  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
